--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "tweakpane": "^3.1.1"
   },
   "browserslist": [
     "> 1%",
